Code clean-up
* Use finals as and when applicable
* delete commented out code
* convert inner classes into static